# yam-vla-tests

./: .gitignore  .gitmodules  HANDOFF.md  README.md  REPORT_yam_sdk_lock_investigation.md  dreamzero-setup.md  journal.md  lag_test.csv  lag_test.txt  molmoact2-setup.md  pyproject.toml  yam_setup_config.json
_archive/dreamzero-exploration/: HANDOFF.md  README.md  WHEN_YOU_RETURN.md
_archive/dreamzero-exploration/modal/: dreamzero_finetune.py
_archive/dreamzero-exploration/scripts/: dreamzero_yam_client.py  inspect_prep.sh  run_finetune_modal.sh  run_inference.sh
_archive/eval-yam/: .gitignore  HANDOFF.md  README.md  download_checkpoints.sh
_archive/eval-yam/eval-10-tasks/: run_eval_gr00t-n17.sh  run_eval_pi05.sh
_archive/eval-yam/scripts/: repl_yam.py  run_repl_gr00t-n17.sh  run_repl_molmoact2.sh  run_server_gr00t-n17.sh  run_server_molmoact2.sh  run_server_pi05.sh  smoke_test_backend.py  yam_backends.py
_archive/grootn1.7-exploration/: .gitignore  yam_setup_config.json
_archive/grootn1.7-exploration/modal/: README.md  finetune_yam.py
_archive/grootn1.7-exploration/scripts/: capture_frames.py  check_hf_access.py  preflight.py  run_client_xdof.sh  run_server.sh  run_server_xdof.sh  smoke_test_server.py  smoke_test_server_xdof.py  yam_config.py
_archive/ikea-10/: .gitignore
_archive/ikea-10/eval/: eval_ikea_tasks.py
_archive/ikea-10/report/: publish_to_docs.sh
_archive/molmoact2-setup/: .gitignore  pyproject.toml  yam_setup_config.json
_archive/molmoact2-setup/eval-10-tasks/: eval_andon_tasks.py  run_eval.sh
_archive/molmoact2-setup/scripts/: can_frame_timing.py  hold_test.py  identify_arms.py  identify_setup.py  list_cams.py  motion_lag_test_v2.py  preflight.py  run_server.sh  run_server_base.sh  update_profiler_v2.py  usb_contention_test.py  usb_contention_test_v2.py  yam_client.py  yam_repl.py
archive/2026-05-21_sync_stopandgo_working/: README.md  git_commit.txt  run_client.sh
configs/policy/: gr00t-n17.yaml  molmoact2.yaml  pi05.yaml
docs/journals/: README.md  grootn1.7-bringup.md
docs/superpowers/specs/: 2026-05-27-eval-results-analysis-design.md
eval/: eval_ikea_tasks.py  run_eval_gr00t-n17.sh  run_eval_molmoact2.sh  run_eval_pi05.sh
eval-10-tasks/: eval_yam_tasks.py  run_eval_molmoact2.sh
eval-10-tasks/results/: results_2026-05-22_162703.csv
evals/_harness/: __init__.py  results.py  runner.py  tasks.py
evals/andon_10/: tasks.yaml
evals/andon_10/results/: README.md
evals/bimanual_easy_bench_4/: README.md  tasks.yaml
evals/bimanual_easy_bench_5/: README.md  __init__.py  tasks.yaml
evals/bimanual_easy_bench_8/: README.md  tasks.yaml
evals/ikea_10/: tasks.yaml
experimental/rtc/: README.md  host_server_rtc.py  requirements.txt  run_client_rtc.sh  run_server_rtc.sh  test_rtc_correctness.py  yam_client_rtc.py
logs/rrd/: README.md
modal/: dreamzero_finetune.py  dreamzero_server.py  prepare_yam_data.py
report/: build.py  report.html
report/fonts/: _google.css
reports/: README.md  system-resources-2026-05-21.md
reports/ikea_10/: extract_images.py
reports/ikea_10/fonts/: fonts.css
scripts/: can_frame_timing_v2.py  capture_frames.py  diagnose_sync_overhead.py  download_checkpoints.sh  get_server_url.sh  identify_setup.py  inspect_prep.sh  list_cams.py  live_top_cam.py  lock_acquire_profiler.py  motion_lag_test.py  move_to_ready.py  repl_andon.sh  repl_yam.py  run_client.sh  run_eval.py  run_modal_server.sh  run_repl.py  run_repl.sh  run_repl_pi05.sh  run_server.sh  run_server_vanilla.sh  sleep_jitter_test.py  smoke_test_remote.py  smoke_test_server.py  test_sdk_lock_fix.py  update_profiler.py  update_profiler_v2.py  usb_contention_test_v2.py  wiggle_right.py  yam_client.py  yam_client_xdof.py  yam_modality.json  yam_repl.py
servers/gr00t-n17/: offline_shim.py  run.sh
servers/molmoact2/: run.sh
servers/pi05/: register_yam_pi05.py  run.sh
src/yam_vla/: __init__.py
src/yam_vla/core/: __init__.py  config.py  control_loop.py  hardware.py  journal.py  keyboard.py  legacy.py  policy.py  (+4 more)
(+15 files in other folders)
