[project]
name = "yam-vla"
version = "0.1.0"
description = "Unified testing grounds for VLAs on the bimanual YAM rig"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "requests>=2.31",
    "json-numpy>=2.1.0",
    "msgpack>=1.0",
    "msgpack-numpy>=0.4.8",
    "pyzmq>=25.0",
    "websockets>=12.0",
    "openpi-client @ git+https://github.com/Physical-Intelligence/openpi.git#subdirectory=packages/openpi-client",
]

[project.optional-dependencies]
hardware = [
    "pyrealsense2>=2.55",
]
viz = [
    "rerun-sdk>=0.20",
]
dev = [
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yam_vla"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"
